--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+#updatesSection iframe {
+  border: none;
+  width: 100%;
+  min-height: 100vh; /* Adjust as needed */
+  background: transparent;
+}
 /* Hide default clear button on search inputs */
 input[type="search"]::-webkit-search-cancel-button {
   -webkit-appearance: none;
