--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ body.dark-mode .result {
 }
 .converter-box.age-calculator input,
 .converter-box.age-calculator button {
-  color: inherit;
+  color: #ffffff;
 }
 
 /* Folder Cards */
